==> NemzNemz/Tu-Hoc/STM32/PROJECT_MINI2/LIB/ST7735.c <==
#include "ST7735.h"
#define LCD_PORT GPIOB
#define CS_LCD_Pin GPIO_PIN_0
#define A0_LCD_Pin GPIO_PIN_1
#define RST_LCD_Pin GPIO_PIN_2

void LCD_Write_CMD(uint8_t cmd){ 
	//Keo CS xuong 0 
	HAL_GPIO_WritePin(LCD_PORT, CS_LCD_Pin, 0);
	//Keo A0 ST7735 (PB1) xuong 0 de gui CMD 
	HAL_GPIO_WritePin(LCD_PORT, A0_LCD_Pin, 0); 
	HAL_SPI_Transmit(&hspi1, &cmd, 1, 1000); 
	//Keo CS len 1 
	 HAL_GPIO_WritePin(LCD_PORT, CS_LCD_Pin, 1); 
}

void LCD_Write_Data(uint8_t data){ 
	//Keo CS xuong 0 
	HAL_GPIO_WritePin(LCD_PORT, CS_LCD_Pin, 0);
	//Keo A0 ST7735 len 1 de gui DATA 
	HAL_GPIO_WritePin(LCD_PORT, A0_LCD_Pin, 1); 
	HAL_SPI_Transmit(&hspi1, &data, 1, 1000); 
	//Keo CS len 1 
	HAL_GPIO_WritePin(LCD_PORT, CS_LCD_Pin, 1);
}

void LCD_Init(){
	//Reset timing: tRESW >5us
	HAL_GPIO_WritePin(GPIOA, RST_LCD_Pin, 0);
	HAL_Delay(10);
	//Reset timing: tREST <120ms
	HAL_GPIO_WritePin(GPIOA, RST_LCD_Pin, 1);
	HAL_Delay(10);
	//Software Reset
	LCD_Write_CMD(0x01);
	//Delay SWRST
	HAL_Delay(120);
	//Sleep Out - Boost on
	LCD_Write_CMD(0x11);
	//Delay SLEEP OUT
	HAL_Delay(120);
	
	//Frame Rate Control 1
	LCD_Write_CMD(lcd_func[0].cmd);
	for(uint8_t i =0; i < lcd_func[0].lenght; i ++){
		LCD_Write_Data(lcd_func[0].data[i]);
	}
	//Frame Rate Control 2
	LCD_Write_CMD(lcd_func[1].cmd);
	for(uint8_t i = 0; i < lcd_func[1].lenght; i++){
		LCD_Write_Data(lcd_func[1].data[i]);
	}
	//Frame Rate Control 3
	LCD_Write_CMD(lcd_func[2].cmd);
	for(uint8_t i = 0; i < lcd_func[2].lenght; i++){
		LCD_Write_Data(lcd_func[2].data[i]);
	}
	//Display Inversion control
	LCD_Write_CMD(lcd_func[3].cmd);
	for(uint8_t i = 0; i < lcd_func[3].lenght; i++){
		LCD_Write_Data(lcd_func[3].data[i]);
	}
	//Power Control 1
	LCD_Write_CMD(lcd_func[4].cmd);
	for(uint8_t i = 0; i < lcd_func[4].lenght; i++){
		LCD_Write_Data(lcd_func[4].data[i]);
	}
	//Power Control 2
	LCD_Write_CMD(lcd_func[5].cmd);
	for(uint8_t i = 0; i < lcd_func[5].lenght; i++){
		LCD_Write_Data(lcd_func[5].data[i]);
	}
	//Power Control 3
	LCD_Write_CMD(lcd_func[6].cmd);
	for(uint8_t i = 0; i < lcd_func[6].lenght; i++){
		LCD_Write_Data(lcd_func[6].data[i]);
	}
	//Power Control 4
	LCD_Write_CMD(lcd_func[7].cmd);
	for(uint8_t i = 0; i < lcd_func[7].lenght; i++){
		LCD_Write_Data(lcd_func[7].data[i]);
	}
	//Power Control 5
	LCD_Write_CMD(lcd_func[8].cmd);
	for(uint8_t i = 0; i < lcd_func[8].lenght; i++){
		LCD_Write_Data(lcd_func[8].data[i]);
	}
	//VCOM Control 1
	LCD_Write_CMD(lcd_func[9].cmd);
	for(uint8_t i = 0; i < lcd_func[9].lenght; i++){
		LCD_Write_Data(lcd_func[9].data[i]);
	};
	//Gamma adjustment +
	LCD_Write_CMD(lcd_func[10].cmd);
	for(uint8_t i = 0; i < lcd_func[10].lenght; i++){
		LCD_Write_Data(lcd_func[10].data[i]);
	}
	//Gamma adjustment -
	LCD_Write_CMD(lcd_func[11].cmd);
	for(uint8_t i = 0; i < lcd_func[11].lenght; i++){
		LCD_Write_Data(lcd_func[11].data[i]);
	}
	//Memory Data Access Control
	LCD_Write_CMD(lcd_func[12].cmd);
	for(uint8_t i = 0; i < lcd_func[12].lenght; i++){
		LCD_Write_Data(lcd_func[12].data[i]);
	}
	//Interface pixel format
	LCD_Write_CMD(lcd_func[13].cmd);
	for(uint8_t i = 0; i < lcd_func[13].lenght; i++){
		LCD_Write_Data(lcd_func[13].data[i]);
	}
	
	//Display Inversion off
	LCD_Write_CMD(0x20);
	//Set vi tri va do phan giai cho LCD
	LCD_set_pos(0, 128, 0, 160);
	//Display On
	LCD_Write_CMD(0x29);
	HAL_Delay(120);
}

void LCD_Draw_Pixel(uint8_t x, uint8_t y, uint16_t color){
	//Neu nhu chieu ngang lon hon 128 va chieu dai lon hon 160, thoat
	if(x >= 128 || y >= 160){
		return ;
	}
	LCD_set_pos(x, x+1, y, y+1);
	//Memory Write
	LCD_Write_CMD(0x2C);
	//Ve 1 pixel mau
	LCD_Write_Data(color >> 8);
	LCD_Write_Data(color & 0xFF);
}

void LCD_draw_char(uint8_t x, uint8_t y, char character, FONT font, uint16_t color, uint16_t bg){
		uint16_t i, j;
    uint16_t pixel_data;
    LCD_set_pos(x, x + font.width - 1,
                y, y + font.height - 1);

    LCD_Write_CMD(0x2C);
    for(i = 0; i < font.height; i++) {
    pixel_data = font.data[(character - 32) * font.height + i];

    for(j = 0; j < font.width; j++) {
        if ((pixel_data << j) & 0x8000) {
            LCD_Write_Data(color >> 8);
            LCD_Write_Data(color & 0xFF);
        } else {
            LCD_Write_Data(bg >> 8);
            LCD_Write_Data(bg & 0xFF);
        }
    }
}

}

void LCD_Draw_String(uint8_t x, uint8_t y, char *str, FONT font, uint16_t color, uint16_t bg){
	//Chung nao chua viet xong chuoi
	while(*str){
		LCD_draw_char(x, y, *str, font, color, bg);
		//Tiep tuc viet
		x += font.width;
    str++;
  }
}
